# nomad-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
nomad_sources/: .gitignore  CMakeLists.txt  README.txt
nomad_sources/ext/sgtelib/: CMakeLists.txt
nomad_sources/ext/sgtelib/src/: Matrix.cpp  Surrogate.cpp  Surrogate_Ensemble.cpp  Surrogate_KS.cpp  Surrogate_Parameters.cpp  Surrogate_Utils.cpp  Surrogate_Utils.hpp  Tests.cpp
src/: PyNomad.pyx  __init__.py  nomadCySimpleInterface.cpp  readme
